Fixed accessibility concern of contrast on header and email link. Also changed "Home" link to redirect to the HCI 472 page rather than the in-progress portfolio.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.5rem;
   color: #3F303B;
 }
@@ -10863,7 +10863,7 @@ p.lead {
 .subheading {
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.35rem;
 }
 
